--- a/config/sync/views.view.my_classes_nodes.yml
+++ b/config/sync/views.view.my_classes_nodes.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_vih_description
+    - field.storage.paragraph.field_vih_heading
     - field.storage.paragraph.field_vih_photo
     - image.style.medium
     - paragraphs.paragraphs_type.vih_teacher_class_description
@@ -136,6 +137,69 @@ display:
           field_api_classes: false
           entity_type: node
           entity_field: title
+          plugin_id: field
+        field_vih_heading:
+          id: field_vih_heading
+          table: paragraph__field_vih_heading
+          field: field_vih_heading
+          relationship: field_vih_paragraphs
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
           plugin_id: field
         field_vih_description:
           id: field_vih_description
@@ -274,7 +338,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"boxy boxy--my-course\">\n  <div class=\"boxy__heading\">\n    <h3 class=\"boxy__heading__title heading-h5\">{{ title }}</h3>\n  </div>\n  <div class=\"boxy__body\">\n    <div class=\"boxy__image\">\n      {{ field_vih_photo }}\n    </div>\n    <div class=\"boxy__content\">\n      {{ field_vih_description }}\n    </div>\n  </div>\n</div>"
+            text: "<div class=\"boxy boxy--my-course\">\n  <div class=\"boxy__heading\">\n    <h3 class=\"boxy__heading__title heading-h5\">{{ title }}</h3>\n  </div>\n  <div class=\"boxy__body\">\n    <div class=\"boxy__image\">\n      {{ field_vih_photo }}\n    </div>\n    <div class=\"boxy__content\">\n      <h5>{{ field_vih_heading }}</h5>\n      {{ field_vih_description }}\n    </div>\n  </div>\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -479,6 +543,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.paragraph.field_vih_description'
+        - 'config:field.storage.paragraph.field_vih_heading'
         - 'config:field.storage.paragraph.field_vih_photo'
   embedded_embedded:
     display_plugin: embed
@@ -498,4 +563,5 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.paragraph.field_vih_description'
+        - 'config:field.storage.paragraph.field_vih_heading'
         - 'config:field.storage.paragraph.field_vih_photo'
