--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -74,8 +74,12 @@ module:
   menu_multilingual: 0
   menu_ui: 0
   metatag: 0
+  metatag_dc: 0
   metatag_facebook: 0
-  metatag_verification: 0
+  metatag_mobile: 0
+  metatag_open_graph: 0
+  metatag_twitter_cards: 0
+  metatag_views: 0
   node: 0
   options: 0
   owlcarousel: 0
