--- a/config/sync/views.view.my_classes_nodes.yml
+++ b/config/sync/views.view.my_classes_nodes.yml
@@ -70,6 +70,70 @@ display:
           hide_empty: false
           default_field_elements: true
       fields:
+        nid:
+          id: nid
+          table: node_field_data
+          field: nid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: true
+            text: '/node/{{ nid__value }}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: number_unformatted
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: node
+          entity_field: nid
+          plugin_id: field
         title:
           id: title
           table: node_field_data
@@ -121,7 +185,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: true
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -271,7 +335,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"boxy boxy--my-course\">\n  <div class=\"boxy__heading\">\n    <h3 class=\"boxy__heading__title heading-h5\">{{ title }}</h3>\n  </div>\n  <div class=\"boxy__body\">\n    <div class=\"boxy__image\">\n      {{ field_vih_photo }}\n    </div>\n    <div class=\"boxy__content\">\n      <h5>{{ field_vih_heading }}</h5>\n      {{ field_vih_description }}\n    </div>\n  </div>\n</div>"
+            text: "<a href=\"{{ nid }}\" class=\"element-wrapper-link\">\n  <div class=\"boxy boxy--my-course\">\n    <div class=\"boxy__body\">\n      <div class=\"row row--equal-height-columns\">\n        <div class=\"col-xs-12 col-sm-4 col-md-3\">\n          <div class=\"photo\">\n            {{ field_vih_photo }}\n\n            <div class=\"photo__overlay\">\n              <div class=\"photo__overlay__text\">\n                {{ field_vih_heading }}\n              </div>\n            </div>\n          </div>\n        </div>\n        <div class=\"col-xs-12 col-sm-8 col-md-9\">\n          <div class=\"boxy__content\">\n            <h3>{{ title }}</h3>\n\n            {{ field_vih_description }}\n          </div>\n        </div>\n      </div>\n    </div>\n  </div>\n</a>"
             make_link: false
             path: ''
             absolute: false
