--- a/config/sync/views.view.my_classes_nodes.yml
+++ b/config/sync/views.view.my_classes_nodes.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.paragraph.field_vih_description
     - field.storage.paragraph.field_vih_heading
+    - field.storage.paragraph.field_vih_photo
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
     - node
@@ -324,6 +325,69 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_vih_photo:
+          id: field_vih_photo
+          table: paragraph__field_vih_photo
+          field: field_vih_photo
+          relationship: field_vih_paragraphs
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_view
+          settings:
+            view_mode: medium
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         nothing:
           id: nothing
           table: views
@@ -541,6 +605,7 @@ display:
       tags:
         - 'config:field.storage.paragraph.field_vih_description'
         - 'config:field.storage.paragraph.field_vih_heading'
+        - 'config:field.storage.paragraph.field_vih_photo'
   embedded_embedded:
     display_plugin: embed
     id: embedded_embedded
@@ -560,3 +625,4 @@ display:
       tags:
         - 'config:field.storage.paragraph.field_vih_description'
         - 'config:field.storage.paragraph.field_vih_heading'
+        - 'config:field.storage.paragraph.field_vih_photo'
