--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -93,7 +93,9 @@ module:
   recreate_block_content: 0
   scheduled_updates: 0
   schema_article: 0
+  schema_event: 0
   schema_metatag: 0
+  schema_person: 0
   search: 0
   search_api: 0
   search_api_db: 0
