--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -94,8 +94,12 @@ module:
   scheduled_updates: 0
   schema_article: 0
   schema_event: 0
+  schema_item_list: 0
   schema_metatag: 0
+  schema_organization: 0
   schema_person: 0
+  schema_web_page: 0
+  schema_web_site: 0
   search: 0
   search_api: 0
   search_api_db: 0
